# rem

./: Cargo.toml
src/rem-borrower/: Cargo.toml  README.md
src/rem-cli/: Cargo.toml  README.md  tmp.txt
src/rem-cli/src/: main.rs  rem_args.rs  utils.rs
src/rem-cli/src/prefactor/: extract_body.rs  lsp_call.rs  mod.rs
src/rem-cli/src/refactor/: borrow.rs  mod.rs  non_local_controller.rs  refactor_main.rs  repair_lifetime.rs
src/rem-cli/src/tests/: borrower.rs  controller.rs  mod.rs  repairer.rs  utils.rs
src/rem-cli/src_tests/borrower/output/: borrow_ref_aliased.rs  borrow_write_use_after.rs  in_out_lifetimes.rs  paper_borrow_in_out.rs
src/rem-constraint/: Cargo.toml
src/rem-controller/: Cargo.toml
src/rem-repairer/: Cargo.toml  README.md
src/rem-utils/: Cargo.toml
src/rem-utils/src/: lib.rs
