[package]
name = "rem-cli"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Britton <matt.britton@anu.edu.au>"]
license = "GPL 3.0"
description = "CLI interface for the REM toolchain. Built to be implemented into the VSCode extension for Rem"
repository = "https://github.com/RuleBrittonica/rem"
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
rem-utils = { version = "0.1", path = "../rem-utils" }
rem-controller = { version = "0.1", path = "../rem-controller" }
rem-repairer = { version = "0.1", path = "../rem-repairer" }
rem-borrower = { version = "0.1", path = "../rem-borrower" }
clap = { version = "4.5.16", features = ["derive"] }
log = "0.4.22"
flexi_logger = "0.29.0"
lsp-server = "0.7.6"
lsp-types = "0.97.0"
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
tower-lsp = "0.20.0"
futures = "0.3.30"
colored = "2.1.0"
git2 = "0.19.0"

[build-dependencies]

[dev-dependencies]

[features]
default = []

