[package]
name = "rem-constraint"
authors = ["VERSE Lab <https://verse-lab.github.io>", "Matthew Britton <mbritton460@gmail.com>"]
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Utilities for Rusty Extraction Maestro"
repository = "https://github.com/RuleBrittonica/rem" # Forked from "https://github.com/verse-lab/rustic-cat"
readme = "readme.md"


[dependencies]
syn = {version="1.0.80", features=["extra-traits", "full", "visit", "fold", "visit-mut", "printing", "parsing"]}
proc-macro2 = "1.0"
quote = "1.0"
nom = {version="7.1.0"}
mktemp = {version="0.4.1"}
rem-utils = { version="0.1", path = "../rem-utils" }
itertools = "0.10.5"
env_logger = "0.11.5"
log = "0.4.17"

[[bin]]
name = "main"
path = "src/main.rs"

[package.metadata.rust-analyzer]
rustc_private=true
